--- a/packages/client-core/src/components/UserMediaWindow/index.module.scss
+++ b/packages/client-core/src/components/UserMediaWindow/index.module.scss
@@ -241,11 +241,10 @@
     flex-direction: column;
 
     .user-controls {
-      display: flex;
+      display: none;
       width: 100%;
       margin: -10px auto 0;
       z-index: 1501;
-      height: 0;
     }
 
     &:focus,
@@ -257,8 +256,8 @@
       }
 
       .user-controls {
+        display: flex;
         padding: 20px 10px 10px;
-        height: auto;
       }
     }
   }
@@ -288,6 +287,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
         margin-left: 5px;
 
         .audio-slider {
@@ -333,6 +333,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
         margin-left: 5px;
 
         .audio-slider {
